# ChangeLog for dev-libs/nspr
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nspr/ChangeLog,v 1.177 2012/02/26 15:56:17 anarchy Exp $

*nspr-4.9 (26 Feb 2012)

  26 Feb 2012; Jory A. Pratt <anarchy@gentoo.org> -nspr-4.8.6.ebuild,
  -nspr-4.8.7.ebuild, -nspr-4.8.9-r1.ebuild, +nspr-4.9.ebuild,
  +files/nspr-4.9-pkgconfig-gentoo.patch:
  remove stale versions, version bump

*nspr-4.8.9-r1 (10 Jan 2012)

  10 Jan 2012; Jory A. Pratt <anarchy@gentoo.org> +nspr-4.8.9-r1.ebuild,
  +files/nspr-4.8.9-link-flags.patch:
  Ensure cflags are passed during linking, bug #365975

  25 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org> nspr-4.8.9.ebuild:
  ppc64 stable wrt #388045

  19 Nov 2011; Raúl Porcel <armin76@gentoo.org> nspr-4.8.9.ebuild:
  alpha/ia64/sparc stable wrt #388045

  06 Nov 2011; Brent Baude <ranger@gentoo.org> nspr-4.8.9.ebuild:
  Marking nspr-4.8.9 ppc for bug 388045

  05 Nov 2011; Markus Meier <maekke@gentoo.org> nspr-4.8.9.ebuild:
  arm stable, bug #388045

  30 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> nspr-4.8.9.ebuild:
  x86 stable wrt bug #388045

  28 Oct 2011; Jeroen Roovers <jer@gentoo.org> nspr-4.8.9.ebuild:
  Stable for HPPA (bug #388045).

  28 Oct 2011; Tony Vroon <chainsaw@gentoo.org> nspr-4.8.9.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in security bug #388045.

  24 Sep 2011; Fabian Groffen <grobian@gentoo.org> nspr-4.8.9.ebuild:
  Fix pkg-config and nspr-config for Darwin where the linker doesn't understand
  (and need) -R arguments, bug #364753

  04 Sep 2011; Markus Meier <maekke@gentoo.org> nspr-4.8.8.ebuild:
  arm stable, bug #379549

  03 Sep 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> nspr-4.8.8.ebuild:
  x86 stable wrt bug #380913

  03 Sep 2011; Kacper Kowalik <xarthisius@gentoo.org> nspr-4.8.8.ebuild:
  ppc/ppc64 stable wrt #379549
